AC_INIT(README)
AC_CANONICAL_SYSTEM
AC_PROG_LIBTOOL
AM_INIT_AUTOMAKE(MonoObjc.framework, 0.1)
AM_MAINTAINER_MODE

dnl Defines CC to avoid warnings
AC_PROG_INSTALL

AC_PATH_PROG(PKG_CONFIG, pkg-config, no)
if test "x$PKG_CONFIG" = "xno"; then
	AC_MSG_ERROR(['pkg-config' is not in your PATH.])
fi

AC_PATH_PROG(MONO, mono, no)
if test "x$PKG_CONFIG" = "xno"; then
	AC_MSG_ERROR(['mono' is not in your PATH.])
fi
AC_SUBST(MONO)

PKG_CHECK_MODULES(MONO, mono >= 0.90)
AC_SUBST(MONO_CFLAGS)
AC_SUBST(MONO_LIBS)

PKG_CHECK_MODULES(MONO_DEPENDENCY, mono, has_mono=true, has_mono=false)
MONO_PREFIX=`pkg-config --variable=prefix mono`
AC_SUBST(MONO_PREFIX)

if test "x$has_mono" = "xtrue"; then
if test `uname -s` = "Darwin"; then
    AC_PATH_PROG(RUNTIME, mint, no)
    AC_PATH_PROG(CSC, mcs, no)
    LIB_PREFIX=
    LIB_SUFFIX=.dylib
else
    AC_PATH_PROG(RUNTIME, mono, no)
    AC_PATH_PROG(CSC, mcs, no)
    LIB_PREFIX=.so
    LIB_SUFFIX=
fi
else
    AC_MSG_ERROR([You need to install mono])
fi

CS="C#"
if test "x$CSC" = "xno" ; then
    AC_MSG_ERROR([No $CS compiler found])
fi

AC_SUBST(RUNTIME)
AC_SUBST(CSC)
AC_SUBST(LIB_PREFIX)
AC_SUBST(LIB_SUFFIX)

PKG_CHECK_MODULES(GLIB2, glib-2.0 >= 2.2.3)
GLIB2_PREFIX=`pkg-config --variable=prefix glib-2.0`
AC_SUBST(GLIB2_PREFIX)
AC_SUBST(GLIB2_CFLAGS)

AC_OUTPUT([
Makefile
])
