
AC_INIT(README)
AC_CANONICAL_SYSTEM
AM_CONFIG_HEADER(config.h)
AM_INIT_AUTOMAKE(cocoa-sharp, 0.9.1)
AM_MAINTAINER_MODE

PACKAGE_VERSION=cocoa-sharp
AC_SUBST(PACKAGE_VERSION)

API_VERSION=1.9.0.0
AC_SUBST(API_VERSION)

AC_CHECK_TOOL(CC, gcc, gcc)
AC_PROG_CC
AC_PROG_INSTALL

AC_HEADER_STDC
AM_PROG_LIBTOOL

# 64bit totally untested send patches
AC_CHECK_SIZEOF(void *, 4)

MONO_REQUIRED_VERSION=1.1.9
PKG_CHECK_MODULES(MONO, mono >= $MONO_REQUIRED_VERSION, has_mono=true, has_mono=false)

AC_PATH_PROG(GACUTIL, gacutil, no) 
if test "x$GACUTIL" = "xno" ; then
	AC_MSG_ERROR([Cannot locate gacutil.  Please install mono])
fi

if test "x$has_mono" = "xtrue"; then
	GACUTIL_FLAGS='/package $(PACKAGE_VERSION) /gacdir $(DESTDIR)$(prefix)/lib'
	AC_PATH_PROG(RUNTIME, mono, no)
	AC_PATH_PROG(MCS, mcs, no)
else
	AC_MSG_ERROR([You need to install mono >= 1.1.9])
fi

AC_PATH_PROG(MDASSEMBLER, mdassembler, no)
AC_PATH_PROG(MONODOCER, monodocer, no)
if test "x$MONODOCER" = "xno" -o "x$MDASSEMBLER" = "xno"; then
	enable_monodoc=no
	doc_sources_dir=
else 
	enable_monodoc=yes
	doc_sources_dir="`pkg-config --variable=sourcesdir monodoc`"
fi
AC_SUBST(MDASSEMBLER)
AC_SUBST(MONODOCER)

AM_CONDITIONAL(ENABLE_MONODOC, test "x$enable_monodoc" = "xyes")

AC_SUBST(MCS)
AC_SUBST(GACUTIL)
AC_SUBST(GACUTIL_FLAGS)
AC_SUBST(MONO_CFLAGS)
AC_SUBST(MONO_LIBS)
AC_SUBST(OBJC)
AC_SUBST(OBJCFLAGS)

AC_OUTPUT([
Makefile
src/Makefile
src/Cocoa/Makefile
src/Cocoa/cocoa-sharp.pc
src/WebKit/Makefile
src/WebKit/webkit-sharp.pc
doc/Makefile
samples/Makefile
])
